# fakesharks

./: .gitignore  Huggingface_Devlopment.ipynb  README.md  app.py  init_db.py  llm.py  pyproject.toml  test_huggingface.ipynb
prompts/: article_system_prompt.txt
static/: app.js  styles.css
templates/: index.html
